--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src/index.css" rel="stylesheet">
-    <title>Persona Gauge</title>
+    <link href="src/App.css" rel="stylesheet">
+    <title>PersonaGauge</title>
   </head>
   <body>
     <div id="root"></div>
